fix(rlCampaignHeader): set nowrap to prevent missing header items
Add css to set nowrap and overflow+decoration -
ensure all items in ul list are displayed
This bug was found by our cucumber test.  Yay!
# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
# On branch spike_assert
# Changes to be committed:
#   (use "git reset HEAD <file>..." to unstage)
#
#	modified:   package.json
#	modified:   test/features/global_navigation.feature
#	modified:   test/features/steps/global_navigation.js
#	modified:   test/features/support/assert.js
#	modified:   test/features/support/world.js
#
# Changes not staged for commit:
#   (use "git add <file>..." to update what will be committed)
#   (use "git checkout -- <file>..." to discard changes in working directory)
#
#	modified:   app/modules/main/directives/rlCampaignHeader/rlCampaignHeader.scss
#

--- a/app/modules/main/directives/rlCampaignHeader/rlCampaignHeader.scss
+++ b/app/modules/main/directives/rlCampaignHeader/rlCampaignHeader.scss
@@ -1,5 +1,10 @@
 rl-campaign-header {
 
+  li {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   ul:first-child li:first-child {
     font-weight: bold;
   }
